--- a/home-page/index.html
+++ b/home-page/index.html
@@ -3,13 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/project-1/lib/css/main.css" />
+    <link rel="stylesheet" href="/lib/css/main.css" />
     <title>Charisma</title>
-    <link
-      rel="shortcut icon"
-      href="/project-1/lib/img/logo.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="/lib/img/logo.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,19 +16,17 @@
   <body>
     <div id="header-01">
       <div class="header-r-l">
-        <a href="/project-1/home-page/register/index.html" target="_blank"
-          >ثبت نام</a
-        >
+        <a href="/home-page/register/index.html" target="_blank">ثبت نام</a>
       </div>
       <div class="header-r-l">
-        <a href="/project-1/home-page/login/index.html" target="_blank">ورود</a>
+        <a href="/home-page/login/index.html" target="_blank">ورود</a>
       </div>
     </div>
     <div id="header-02">
       <div id="profile-div" style="display: inline-block">
         <a href="#"
           ><img
-            src="/project-1/lib/img/profile.webp"
+            src="/lib/img/profile.webp"
             alt="profile"
             style="display: inline-block; width: 80px"
         /></a>
@@ -45,16 +39,14 @@
         </ul>
       </div>
       <div id="brand-div">
-        <a href="#"
-          ><img src="/project-1/lib/img/logo.png" alt="brandicon"
-        /></a>
+        <a href="#"><img src="/lib/img/logo.png" alt="brandicon" /></a>
       </div>
     </div>
     <div id="main-content">
       <div id="paragraph">
         <h1>لورم ایپسوم</h1>
         <p>
-          لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+          لورم ایپسوم م `تن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
           استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در
           ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و
           کاربردهای متنوع با هدف بهبود ابزارهای کاربردی مدی می باشد، کتابهای
@@ -73,17 +65,17 @@
         <div class="slider">
           <div class="slides">
             <img
-              src="/project-1/lib/img/farm.jpg"
+              src="/lib/img/farm.jpg"
               alt="Slide 1"
               style="width: 100%; height: 500px"
             />
             <img
-              src="/project-1/lib/img/ifel.jpg"
+              src="/lib/img/ifel.jpg"
               alt="Slide 2"
               style="width: 100%; height: 500px"
             />
             <img
-              src="/project-1/lib/img/man.jfif"
+              src="/lib/img/man.jfif"
               alt="Slide 3"
               style="width: 800px; height: 500px"
             />
@@ -117,11 +109,15 @@
         </p>
       </div>
       <div
+        id="pic-par"
         style="
-          display: flex;
-          width: 100%;
-          justify-content: space-between;
+          display: grid;
+           
+          gap: 10px;
+          width: 100vw;
           padding: 0 100px;
+          margin-top: 100px;
+          padding-bottom: 100px;
         "
       >
         <div class="class">
@@ -133,8 +129,23 @@
               text-align: center;
             "
           >
-            <img style="width: 250px" src="../lib/img/farm.jpg" />
-            <p style="margin-top: 50px">لورم ایپسوم</p>
+            <img
+              style="width: 250px; height: 200px"
+              src="/lib/img/ifel-france.cms"
+            />
+            <p
+              style="
+                margin-top: 50px;
+                width: 300px;
+                text-align: center;
+                direction: rtl;
+                font-size: 18px;
+              "
+            >
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله
+              در ستون و سطرآنچنان که لازم است.
+            </p>
           </div>
         </div>
         <div class="class">
@@ -146,8 +157,20 @@
               text-align: center;
             "
           >
-            <img style="width: 250px" src="../lib/img/farm.jpg" />
-            <p style="margin-top: 50px">لورم ایپسوم</p>
+            <img style="width: 250px; height: 200px" src="/lib/img/man.jfif" />
+            <p
+              style="
+                margin-top: 50px;
+                width: 300px;
+                text-align: center;
+                direction: rtl;
+                font-size: 18px;
+              "
+            >
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله
+              در ستون و سطرآنچنان که لازم است.
+            </p>
           </div>
         </div>
         <div class="class">
@@ -159,8 +182,20 @@
               text-align: center;
             "
           >
-            <img style="width: 250px" src="../lib/img/farm.jpg" />
-            <p style="margin-top: 50px">لورم ایپسوم</p>
+            <img style="width: 250px; height: 200px" src="/lib/img/ifel.jpg" />
+            <p
+              style="
+                margin-top: 50px;
+                width: 300px;
+                text-align: center;
+                direction: rtl;
+                font-size: 18px;
+              "
+            >
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله
+              در ستون و سطرآنچنان که لازم است.
+            </p>
           </div>
         </div>
         <div class="class">
@@ -172,45 +207,23 @@
               text-align: center;
             "
           >
-            <img style="width: 250px" src="../lib/img/farm.jpg" />
-            <p style="margin-top: 50px">لورم ایپسوم</p>
+            <img style="width: 250px; height: 200px" src="/lib/img/farm.jpg" />
+            <p
+              style="
+                margin-top: 50px;
+                width: 300px;
+                text-align: center;
+                direction: rtl;
+                font-size: 18px;
+              "
+            >
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله
+              در ستون و سطرآنچنان که لازم است.
+            </p>
           </div>
         </div>
       </div>
-      <div id="option-div">
-        <button
-          class="button-option"
-          onclick="showText('لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت . این متن شماره چهار است')"
-        >
-          متن شماره چهار
-        </button>
-        <button
-          class="button-option"
-          onclick="showText('لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت . این متن شماره سه است')"
-        >
-          متن شماره سه
-        </button>
-        <button
-          class="button-option"
-          onclick="showText('لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که از صنعت ه لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت . این متن شماره دو است')"
-        >
-          متن شماره دو
-        </button>
-        <button
-          class="button-option"
-          onclick="show('لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که  و متون بلک. این متن شماره یک است ')"
-        >
-          متن شماره یک
-        </button>
-      </div>
-      <div id="output-div">
-        <p id="output">.اینجا متن نمایش داده می‌شود</p>
-      </div>
-      <script>
-        function showText(text) {
-          document.getElementById("output").innerText = text;
-        }
-      </script>
     </div>
   </body>
 </html>
