full compleat project-01

--- a/home-page/index.html
+++ b/home-page/index.html
@@ -32,9 +32,25 @@
         /></a>
       </div>
       <div id="menu-div" style="display: inline-block">
-        <ul style="font-family: Vazirmatn, Tahoma">
+        <button class="menu-toggle">03 منو</button>
+        <ul class="menus">
           <li><a href="#">منو 03</a></li>
+          <li><a href="#">منو 03</a></li>
+          <li><a href="#">منو 03</a></li>
+        </ul>
+      </div>
+      <div id="menu-div" style="display: inline-block">
+        <button class="menu-toggle">02 منو</button>
+        <ul class="menus">
           <li><a href="#">منو 02</a></li>
+          <li><a href="#">منو 02</a></li>
+          <li><a href="#">منو 02</a></li>
+        </ul>
+      </div><div id="menu-div" style="display: inline-block">
+        <button class="menu-toggle">01 منو</button>
+        <ul class="menus">
+          <li><a href="#">منو 01</a></li>
+          <li><a href="#">منو 01</a></li>
           <li><a href="#">منو 01</a></li>
         </ul>
       </div>
@@ -112,7 +128,7 @@
         id="pic-par"
         style="
           display: grid;
-           
+
           gap: 10px;
           width: 100vw;
           padding: 0 100px;
