--- a/home-page/index.html
+++ b/home-page/index.html
@@ -79,7 +79,7 @@
         <button id="prev" onclick="prevSlide()">&#10094;</button>
         <button id="next" onclick="nextSlide()">&#10095;</button>
         <div class="slider">
-          <div class="slides">
+          <div class="slides" >
             <img
               src="/lib/img/farm.jpg"
               alt="Slide 1"
@@ -104,13 +104,13 @@
           const slides = document.querySelector(".slides");
           const totalSlides = document.querySelectorAll(".slides img").length;
           index = (i + totalSlides) % totalSlides;
-          slides.style.transform = `translateX(-${index * 75}%)`;
+          slides.style.transform = `translateX(${index * 75}%)`;
         }
         function prevSlide() {
-          showSlide(index - 1);
+          showSlide(index + 1);
         }
         function nextSlide() {
-          showSlide(index + 1);
+          showSlide(index - 1);
         }
       </script>
     </div>
@@ -127,9 +127,8 @@
       <div
         id="pic-par"
         style="
-          display: grid;
-
-          gap: 10px;
+          display: flex;
+          justify-content: center;
           width: 100vw;
           margin-top: 100px;
           padding-bottom: 100px;
@@ -152,7 +151,6 @@
               style="
                 margin-top: 50px;
                 width: 300px;
-                text-align: center;
                 direction: rtl;
                 font-size: 18px;
               "
@@ -177,7 +175,6 @@
               style="
                 margin-top: 50px;
                 width: 300px;
-                text-align: center;
                 direction: rtl;
                 font-size: 18px;
               "
@@ -202,7 +199,6 @@
               style="
                 margin-top: 50px;
                 width: 300px;
-                text-align: center;
                 direction: rtl;
                 font-size: 18px;
               "
@@ -227,7 +223,6 @@
               style="
                 margin-top: 50px;
                 width: 300px;
-                text-align: center;
                 direction: rtl;
                 font-size: 18px;
               "
